[package]
name = "rusty-rates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.11.0"
dotenv = "0.15.0"
reqwest = { version = "0.11.22", features = ["json"] }
serde_json = "1.0.107"
structopt = "0.3.26"
tokio = "1.32.0"
